# FOR-AI

./: .env.example  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  GITHUB_UPLOAD.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  INITIALIZATION_COMPLETE.md  LICENSE  Makefile  PROJECT_SUMMARY.txt  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  SETUP.md  VERIFICATION.md  create_fixture.py  create_json_fixture.py  create_superuser.py  db.sqlite3  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  setup.cfg  test_validation.py  verify_system.py
accounts/: admin.py  administration_urls.py  decorators.py  education_urls.py  forms.py  models.py  tests.py  urls.py  views.py
administration/: urls.py
battleship/: __init__.py  ai.py  board.py  game.py  ship.py  types.py  ui.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  auth_utils.py  current_user.py  forms.py  middleware.py  mixins.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py  views_auth.py  views_director.py  views_superuser.py
education/: urls.py
education_system/: asgi.py  settings.py  urls.py  wsgi.py
fixtures/: initial_data.json
main/: admin.py  apps.py  models.py
requirements/: base.txt
rewards/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py  views_original.py
rewards_project/: asgi.py  settings.py  urls.py  wsgi.py
school_admin/: admin.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
school_analytics/: asgi.py  settings.py  urls.py  wsgi.py
(+250 files in other folders)
