[tool.isort]
profile = "django"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["auth_app", "admin_app", "education_app"]
known_third_party = ["django", "rest_framework", "corsheaders"]
skip = [
    ".git",
    ".tox", 
    ".pytest_cache",
    "node_modules",
    "venv",
    "env",
    "build",
    "dist",
    "*.egg-info"
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"